# ScreenPilot

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  readme_cn.md
.github/workflows/: nightly.yml
backend/: AGENTS.md  Cargo.toml
backend/src/: config.rs  discovery.rs  dlna.rs  frontend.rs  main.rs  media_server.rs  persistence.rs  state.rs
backend/src/encoder/: ffmpeg.rs  gpu.rs  mod.rs  os_framework.rs  runtime_test.rs
frontend/: AGENTS.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  version.ts
frontend/src/__tests__/: about-view.test.ts  app.test.ts  router.test.ts  version.test.ts
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/types/: index.ts
frontend/src/views/: AboutView.vue  DevicesView.vue  MediaView.vue  ScenesView.vue
frontend/test/: setup.ts
media/: README.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  discovery.rs  dlna.rs  lib.rs  main.rs  state.rs
