[package]
name = "screen-pilot-backend"
version = "0.1.0"
description = "ScreenPilot web backend – LAN digital signage controller using DLNA/UPnP AV"
authors = ["ScreenPilot Contributors"]
edition = "2021"

[[bin]]
name = "screen-pilot-backend"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["tokio", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
rust-embed = "8"
regex = "1"

[dev-dependencies]
tempfile = "3"
