[package]
name = "screen-pilot"
version = "0.1.0"
description = "LAN digital signage controller using DLNA/UPnP AV"
authors = ["ScreenPilot Contributors"]
edition = "2021"

[lib]
name = "screen_pilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "screen-pilot"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["tokio"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
socket2 = { version = "0.5", features = ["all"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
once_cell = "1"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
